samba/filepropertiesplugin/groupmanager.h
@@ -7,35 +7,44 @@
 
 #include <QObject>
 
+enum class HelpfulAction {
+    None,
+    AddUserToGroup
+};
+
 class GroupManager : public QObject
 {
     Q_OBJECT
-    Q_PROPERTY(bool ready READ isReady NOTIFY isReadyChanged)
-    Q_PROPERTY(bool member READ isMember NOTIFY isMemberChanged)
-    Q_PROPERTY(bool canMakeMember READ canMakeMember NOTIFY canMakeMemberChanged)
-    Q_PROPERTY(QString targetGroup READ targetGroup NOTIFY targetGroupChanged)
+    Q_PROPERTY(QString errorText MEMBER m_errorText NOTIFY errorTextChanged)
+    Q_PROPERTY(QString errorExplanation MEMBER m_errorExplanation NOTIFY errorExplanationChanged)
+    Q_PROPERTY(bool hasHelpfulAction MEMBER m_hasHelpfulAction NOTIFY hasHelpfulActionChanged)
+    Q_PROPERTY(QString helpfulActionIcon MEMBER m_helpfulActionIcon NOTIFY helpfulActionIconChanged)
+    Q_PROPERTY(QString helpfulActionText MEMBER m_helpfulActionText NOTIFY helpfulActionTextChanged)
+    Q_PROPERTY(bool ready MEMBER m_ready NOTIFY isReadyChanged)
 public:
     explicit GroupManager(QObject *parent = nullptr);
 
-    bool canMakeMember() const;
-    bool isReady() const;
-    QString targetGroup() const;
-    bool isMember() const;
-
 public Q_SLOTS:
-    void makeMember();
+    void performHelpfulAction();
 
 Q_SIGNALS:
     void isReadyChanged();
-    void isMemberChanged();
-    void canMakeMemberChanged();
-    void madeMember();
-    void targetGroupChanged();
-    void makeMemberError(const QString &error);
+    void errorTextChanged();
+    void errorExplanationChanged();
+    void hasHelpfulActionChanged();
+    void helpfulActionIconChanged();
+    void helpfulActionTextChanged();
+    void helpfulActionError(const QString &error);
+    void needsReboot();
 
 private:
-    bool m_canMakeMember = false;
-    bool m_isMember = false;
     bool m_ready = false;
     QString m_targetGroup;
+    QString m_user;
+    QString m_errorText;
+    QString m_errorExplanation;
+    HelpfulAction m_helpfulAction;
+    bool m_hasHelpfulAction = false;
+    QString m_helpfulActionIcon;
+    QString m_helpfulActionText;
 };
